# warehouse

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Flatpak Build & Run.run.xml  Flattool ToDo.txt  GNOME Circle.md  NOT_PLANNED.md  PLANNED & NOT PLANNED.md  README.md  Warehouse ToDo.txt  eslint.config.js  io.github.flattool.Warehouse.json  io.github.heliguy4599.FlattoolGUI.flatpak  io.github.heliguy4599.FlattoolGUI.json  io.github.heliguy4599.Warehouse.json  meson.build  meson_options.txt  org.neocities.heliguy.Warehouse.json  package.json  pyproject.toml  run.sh  tsconfig.json  update_potfiles.py  update_translation.sh  warehouse.doap
.github/ISSUE_TEMPLATE/: bug-report.md  custom-issue-template.md  feature-request.md
.github/workflows/: file_format.py  flatpak-builder.yml  static_checks.yml
build-aux/: fuse-2.9.2-closefrom.patch  fuse-2.9.2-namespace-conflict-fix.patch  fuse-disable-sys-mount-under-flatpak.patch  fusermount-wrapper.sh  io.github.flattool.Warehouse.json
data/: io.github.flattool.Warehouse.data.gresource.xml  io.github.flattool.Warehouse.desktop.in  io.github.flattool.Warehouse.gschema.xml  io.github.flattool.Warehouse.metainfo.xml.in  io.github.flattool.Warehouse.service.in  io.github.heliguy4599.FlattoolGUI.appdata.xml.in  io.github.heliguy4599.FlattoolGUI.desktop.in  io.github.heliguy4599.FlattoolGUI.gschema.xml  io.github.heliguy4599.Warehouse.appdata.xml.in  io.github.heliguy4599.Warehouse.desktop.in  io.github.heliguy4599.Warehouse.gschema.xml  io.github.heliguy4599.Warehouse.metainfo.xml.in  meson.build  org.neocities.heliguy.Warehouse.desktop.in  org.neocities.heliguy.Warehouse.gschema.xml  org.neocities.heliguy.Warehouse.metainfo.xml.in  style.css
data/icons/: icons.gresource.xml  meson.build  meson_icon_compile.py
data/ui/: downgrade.blp  filter.blp  orphans.blp  popular_remotes.blp  properties.blp  remotes.blp  search_install.blp  snapshots.blp  window.blp
po/: LINGUAS  POTFILES  ar.po  bg.po  cs.po  de.po  el.po  es.po  eu.po  fi.po  flattool-gui.pot  fr.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  meson.build  nb.po  nb_NO.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  th.po  tr.po  uk.po  vi.po  warehouse.pot  zh_Hans.po  zh_Hant.po
src/: app_row_widget.py  common.py  const.py  const.py.in  downgrade.blp  downgrade_window.py  filter.blp  filter_window.py  flatpak.ts  flattool  flattool-gui.gresource.xml  flattool-gui.in  functions.py  host_info.py  io.github.flattool.Warehouse.js  main.py  main.ts  meson.build  meson_blueprint_compile.py  mixins.ts  orphans.blp  orphans_window.py  package_install_worker.py  popular_remotes.blp  popular_remotes.ts  popular_remotes_window.py  properties.blp  properties_window.py  remotes.blp  remotes.py  remotes_window.py  search_install.blp  search_install_window.py  shortcuts-dialog.blp  show_properties_window.py  snapshots.blp  snapshots_window.py  style.css  ui.gresource.xml  warehouse.gresource.xml  (+4 more)
src/change_version_page/: change_version_page.blp  change_version_page.py  change_version_worker.py
src/data_page/: data_page.blp  data_page.ts  data_subpage.blp  data_subpage.ts
src/filters_page/: filters_page.blp  filters_page.py
src/flatpak/: installation.ts
src/gtk/: app_row.blp  app_row.py  attempt_install_dialog.blp  attempt_install_dialog.py  error_toast.py  help-overlay.blp  installation_chooser.blp  installation_chooser.py  loading_status.blp  loading_status.py  shortcuts-dialog.blp  sidebar_button.py
src/install_page/: file_install_dialog.blp  file_install_dialog.py  install_page.blp  install_page.py  pending_page.blp  pending_page.py  result_row.blp  result_row.py  results_page.blp  results_page.py  select_page.blp  select_page.py
src/main_window/: window.blp  window.py
src/packages_page/: app_row.blp  app_row.py  details_page.blp  details_page.ts  filter_page.blp  filter_page.ts  filters_page.blp  filters_page.py  info_row.blp  info_row.ts  package_row.blp  package_row.ts  packages_page.blp  packages_page.py  packages_page.ts  uninstall_dialog.blp  uninstall_dialog.py
src/pages/: base_page.ts  packages_page.blp  packages_page.ts  remotes_page.blp  remotes_page.ts
src/properties_page/: properties_page.blp  properties_page.py
src/remotes_page/: add_remote_dialog.blp  add_remote_dialog.py  remote_row.blp  remote_row.py  remote_row.ts  remotes_page.blp  remotes_page.py  remotes_page.ts
src/snapshot_page/: new_snapshot_dialog.blp  new_snapshot_dialog.py  snapshot_box.blp  snapshot_box.py  snapshot_page.blp  snapshot_page.py  snapshots_list_page.blp  snapshots_list_page.py  tar_worker.py
src/user_data_page/: active_data_page.blp  active_data_page.py  data_box.blp  data_box.py  data_subpage.blp  data_subpage.py  leftover_data_page.blp  leftover_data_page.py  user_data_page.blp  user_data_page.py
src/utils/: helper_funcs.ts  shared_vars.ts
src/widgets/: app_row.blp  app_row.py  base_page.ts  content_page.ts  data_box.blp  data_box.py  error_toast.py  loading_group.blp  loading_group.ts  search_button.blp  search_button.ts  search_group.blp  search_group.ts  sidebar_button.ts  simple_menu.ts  simple_menu_item.blp  simple_menu_item.ts  status_box.blp  status_box.py
src/window/: main_window.blp  main_window.ts  sidebar_row.blp  sidebar_row.ts
tests/: README_TESTS.md  meson.build
tests/sources/: example_test.ts
types/: ambient.d.ts  gettext.d.ts
